fix bet release checkbox alignment

--- a/client/Oblix/css/unilever-style.css
+++ b/client/Oblix/css/unilever-style.css
@@ -1275,10 +1275,14 @@ table tbody tr td {
     display: inline-block;
     width: 50%;
 }
-.create_campaign_priority select {
-    width: 15%;
+input[type=checkbox].priority_input, select.priority_input {
+    width: 140px;
     margin-left: 20px;
     margin-top: 25px;
+}
+.no_padding{
+    padding-left: 0px;
+    padding-right: 0px;
 }
 .campaign_date_picker {
     display: inline-block;
@@ -1286,9 +1290,6 @@ table tbody tr td {
 .create_campaign_priority .table_date_formatting {
     padding-left: 10px;
     padding-right: 15px;
-}
-.create_campaign_priority input {
-    width: 140px;
 }
 .create_campaign_priority .campaign_create_agency_hub_split_table_subtitle {
     padding-top: 12px;
